tests/stacks/examples/alice/test_data/expected/admissionregistration.k8s.io_v1beta1_mutatingwebhookconfiguration_inferenceservice.serving.kubeflow.org.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/serving-cert
  creationTimestamp: null
  labels:
    app: kfserving
<<<<<<< HEAD
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/name: kfserving-install
=======
    app.kubernetes.io/component: kfserving
    app.kubernetes.io/name: kfserving
>>>>>>> upstream/master
    kustomize.component: kfserving
  name: inferenceservice.serving.kubeflow.org
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: kfserving-webhook-server-service
      namespace: kubeflow
      path: /mutate-inferenceservices
  failurePolicy: Fail
  name: inferenceservice.kfserving-webhook-server.defaulter
  rules:
  - apiGroups:
    - serving.kubeflow.org
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - inferenceservices
- clientConfig:
    caBundle: Cg==
    service:
      name: kfserving-webhook-server-service
      namespace: kubeflow
      path: /mutate-pods
  failurePolicy: Fail
  name: inferenceservice.kfserving-webhook-server.pod-mutator
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
<<<<<<< HEAD
=======
  objectSelector:
    matchExpressions:
    - key: serving.kubeflow.org/inferenceservice
      operator: Exists
>>>>>>> upstream/master
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
